crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_set_multiple_properties.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Alice'}) SET n.age = 31, n.active = true RETURN n\")"
---
MATCH (n:Person {name: 'Alice'})
SET n.age = 31, n.active = TRUE
RETURN n
