crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_with_aggregation.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person)-[r:KNOWS]->(m) WITH n, count(m) AS friendCount RETURN n.name, friendCount ORDER BY friendCount DESC\")"
---
MATCH (n:Person)-[r:KNOWS]->(m)
WITH n, COUNT(m) AS friendCount
RETURN n.name, friendCount
ORDER BY friendCount DESC
